firmware/source/sdk/.metadata/.plugins/org.eclipse.cdt.ui/lwip_echo1.build.log
14:44:21 **** Build of configuration Debug for project lwip_echo1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/echo.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/echo.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../lwip_echo1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/echo.d" -MT"src/echo.o" -o "src/echo.o" "../src/echo.c"
../src/echo.c:42:12: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
 int *ptr = 0xc2000000;
            ^~~~~~~~~~
../src/echo.c: In function 'recv_callback':
../src/echo.c:160:5: warning: implicit declaration of function 'transferTcpData'; did you mean 'transfer_data'? [-Wimplicit-function-declaration]
     transferTcpData(tcpTxbuf, 12, tpcb);
     ^~~~~~~~~~~~~~~
     transfer_data
../src/echo.c:142:9: warning: unused variable 'wAckBuffLength' [-Wunused-variable]
     int wAckBuffLength = 8;
         ^~~~~~~~~~~~~~
../src/echo.c:60:7: warning: variable 'cyLiteCmd' set but not used [-Wunused-but-set-variable]
   int cyLiteCmd;
       ^~~~~~~~~
../src/echo.c:56:7: warning: variable 'pktSN' set but not used [-Wunused-but-set-variable]
   int pktSN;
       ^~~~~
../src/echo.c:54:9: warning: variable 'errCode' set but not used [-Wunused-but-set-variable]
   u32_t errCode = 0;
         ^~~~~~~
../src/echo.c: In function 'start_application':
../src/echo.c:247:3: warning: implicit declaration of function 'start_udp'; did you mean 'strtold'? [-Wimplicit-function-declaration]
   start_udp();
   ^~~~~~~~~
   strtold
Finished building: ../src/echo.c
 
Building file: ../src/i2c_access.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/i2c_access.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../lwip_echo1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/i2c_access.d" -MT"src/i2c_access.o" -o "src/i2c_access.o" "../src/i2c_access.c"
Finished building: ../src/i2c_access.c
 
Building file: ../src/iic_phyreset.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/iic_phyreset.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../lwip_echo1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/iic_phyreset.d" -MT"src/iic_phyreset.o" -o "src/iic_phyreset.o" "../src/iic_phyreset.c"
Finished building: ../src/iic_phyreset.c
 
Building file: ../src/main.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../lwip_echo1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c:43:28: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 print_ip(char *msg, struct ip_addr *ip)
                            ^~~~~~~
In file included from ../../lwip_echo1_bsp/ps7_cortexa9_0/include/lwip/ip_addr.h:43:0,
                 from ../../lwip_echo1_bsp/ps7_cortexa9_0/include/lwip/netif.h:46,
                 from ../../lwip_echo1_bsp/ps7_cortexa9_0/include/netif/xadapter.h:47,
                 from ../src/main.c:23:
../src/main.c: In function 'print_ip':
../../lwip_echo1_bsp/ps7_cortexa9_0/include/lwip/ip4_addr.h:199:52: error: dereferencing pointer to incomplete type 'struct ip_addr'
 #define ip4_addr1(ipaddr) (((const u8_t*)(&(ipaddr)->addr))[0])
                                                    ^
../src/main.c:46:32: note: in expansion of macro 'ip4_addr1'
  xil_printf("%d.%d.%d.%d\n\r", ip4_addr1(ip), ip4_addr2(ip),
                                ^~~~~~~~~
../src/main.c: At top level:
../src/main.c:52:26: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 print_ip_settings(struct ip_addr *ip, struct ip_addr *mask, struct ip_addr *gw)
                          ^~~~~~~
../src/main.c: In function 'print_ip_settings':
../src/main.c:55:25: warning: passing argument 2 of 'print_ip' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip("Board IP: ", ip);
                         ^~
../src/main.c:43:1: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 print_ip(char *msg, struct ip_addr *ip)
 ^~~~~~~~
../src/main.c:56:25: warning: passing argument 2 of 'print_ip' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip("Netmask : ", mask);
                         ^~~~
../src/main.c:43:1: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 print_ip(char *msg, struct ip_addr *ip)
 ^~~~~~~~
../src/main.c:57:25: warning: passing argument 2 of 'print_ip' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip("Gateway : ", gw);
                         ^~
../src/main.c:43:1: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 print_ip(char *msg, struct ip_addr *ip)
 ^~~~~~~~
../src/main.c: In function 'main':
../src/main.c:107:20: warning: passing argument 1 of 'print_ip_settings' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip_settings(&ipaddr, &netmask, &gw);
                    ^
../src/main.c:52:1: note: expected 'struct ip_addr *' but argument is of type 'ip_addr_t * {aka struct ip4_addr *}'
 print_ip_settings(struct ip_addr *ip, struct ip_addr *mask, struct ip_addr *gw)
 ^~~~~~~~~~~~~~~~~
../src/main.c:107:29: warning: passing argument 2 of 'print_ip_settings' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip_settings(&ipaddr, &netmask, &gw);
                             ^
../src/main.c:52:1: note: expected 'struct ip_addr *' but argument is of type 'ip_addr_t * {aka struct ip4_addr *}'
 print_ip_settings(struct ip_addr *ip, struct ip_addr *mask, struct ip_addr *gw)
 ^~~~~~~~~~~~~~~~~
../src/main.c:107:39: warning: passing argument 3 of 'print_ip_settings' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip_settings(&ipaddr, &netmask, &gw);
                                       ^
../src/main.c:52:1: note: expected 'struct ip_addr *' but argument is of type 'ip_addr_t * {aka struct ip4_addr *}'
 print_ip_settings(struct ip_addr *ip, struct ip_addr *mask, struct ip_addr *gw)
 ^~~~~~~~~~~~~~~~~
../src/main.c:138:6: warning: implicit declaration of function 'drainDebugFifoUdp' [-Wimplicit-function-declaration]
      drainDebugFifoUdp(0x21);
      ^~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:59: src/main.o] Error 1

14:44:21 Build Finished (took 529ms)

